# MusicPlayer

./: .gitignore  .gitmodules  Auther.txt  CMakeLists.txt  CMakeUserPresets.json  LICENSE.txt  MusicPlayer_zh_CN.ts  README.md  Report.md  deploy.sh  includeFiles.h  main.cpp  widget.h  widget.ui  系统框架.xmind  课程设计报告.docx
.github/workflows/: Android.yml  Windows.yml  linux.yml  ubuntu.yml
AppDir/usr/share/applications/: MusicPlayer.desktop
Reports/: Report.md  程序设计课程设计演示视频.prproj  课程设计报告.docx
TSFiles/: MusicPlayer_zh_CN.ts
skin/: dark-style.qss  light-style.qss  shared.qrc  skin.qrc
src/: BasicWidget.cpp  BasicWidget.h  ChangePlaybackSpeedButton.cpp  ChangePlaybackSpeedButton.h  ChangeVolumeButton.cpp  ChangeVolumeButton.h  ChangeVolumeWidget.cpp  ConfigManager.cpp  ConfigManager.h  DisplayWidget.cpp  DisplayWidget.h  DisplayWidget.ui  LoopModeSwitcher.cpp  LoopModeSwitcher.h  LyricsDelegate.cpp  LyricsDelegate.h  MusicItem.cpp  MusicItem.h  MusicPlayer_zh_CN.ts  PlayPauseButton.cpp  PlayPauseButton.h  ProgressBar.cpp  ProgressBar.h  ScrollingLabel.cpp  ScrollingLabel.h  Settings.cpp  Settings.h  Settings.ui  VolumeFlyoutMenu.cpp  VolumeFlyoutMenu.h  includeFiles.h  main.cpp  widget.cpp  widget.h  widget.ui
src/widgetframe/: CMakeLists.txt  windowbar.h  windowbar_p.h  windowbutton.cpp  windowbutton.h
